# ZJU-Connect-for-Windows

./: .gitignore  CMakeLists.txt  README.md  installer.iss  l2tpmode.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  webloginmode.cpp  zjuconnectmode.cpp
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: build.yml
QrCodeGenerator/: CMakeLists.txt  QrCodeGenerator.cpp  QrCodeGenerator.h
QrCodeGenerator/qrcodegen/: qrcodegen.cpp  qrcodegen.h
captchadialog/: captchadialog.cpp  captchadialog.h
configs/: hitsz.ini
docs/: ADVANCED_USAGE.md  USAGE.md
extrasettingwindow/: extrasettingwindow.cpp  extrasettingwindow.h  extrasettingwindow.ui
loginwindow/: loginwindow.cpp  loginwindow.h  loginwindow.ui
networkdetector/: networkdetector.cpp  networkdetector.h
portforwardingwindow/: portforwardingwindow.cpp  portforwardingwindow.h  portforwardingwindow.ui
randcodedialog/: randcodedialog.cpp  randcodedialog.h
resource/: icon.icns  macos-fix.sh
settingwindow/: settingwindow.cpp  settingwindow.h  settingwindow.ui
singleapplication/: singleapplication.h
utils/: proxysettings.cpp  utils.cpp  utils.h
zjuconnectcontroller/: zjuconnectcontroller.cpp  zjuconnectcontroller.h
zjurulewindow/: zjurulewindow.cpp  zjurulewindow.h  zjurulewindow.ui
